--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -8,13 +8,44 @@ body {
     margin-bottom: -60px;
 
     font-family: 'Lato', sans-serif;
+    color: white;
+}
+
+a {
+    color: inherit;
+    text-decoration: underline;
+
+    transition: color 0.1s ease-out;
+}
+
+a:hover {
+    color: #b1e7fa;
 }
 
 .content-wrapper {
     min-height: calc(100vh - 60px);
+    font-size: 1.1em;
 }
 
 .app > footer {
     width: 100%;
     height: 60px;
+
+    /*border: 1px solid red;*/
+
+    display: table;
+}
+
+.app > footer .footer-text {
+    /*border: 1px solid blue;*/
+
+    display: table-cell;
+    vertical-align: middle;
+
+    text-align: center;
+}
+
+.app > footer .footer-text-item {
+    margin-left: 5px;
+    margin-right: 5px;
 }
