--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -27,6 +27,37 @@ a:hover {
     font-size: 1.1em;
 }
 
+.app-header {
+    padding: 20px;
+}
+
+.header-user {
+    float: right;
+    display: table;
+}
+
+.header-user > div {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.header-user-settings-cog {
+    padding-left: 10px;
+    font-size: 1.3em;
+}
+
+.header-user-settings-cog a svg {
+    transition: transform 0.1s ease-out;
+}
+
+.header-user-settings-cog a:hover {
+    color: inherit;
+}
+
+.header-user-settings-cog a:hover svg {
+    transform: rotate(30deg);
+}
+
 .app > footer {
     width: 100%;
     height: 60px;
