--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -22,6 +22,24 @@ a:hover {
     color: #b1e7fa;
 }
 
+.app:not(.loading) {
+    /*opacity: 1;*/
+    /*transform: none;*/
+
+    animation: loaded-app-fadein 0.6s cubic-bezier(.35,.85,.45,1);
+}
+
+@keyframes loaded-app-fadein {
+    from {
+        transform: scale(0.95);
+        opacity: 0;
+    }
+    to {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
 .content-wrapper {
     min-height: calc(100vh - 60px);
     font-size: 1.1em;
@@ -56,6 +74,35 @@ a:hover {
 
 .header-user-settings-cog a:hover svg {
     transform: rotate(30deg);
+}
+
+.app-loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+
+    animation: app-loader-fadein 1s;
+}
+
+.app-loader > svg {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+@keyframes app-loader-fadein {
+    0% {
+        opacity: 0;
+    }
+    20% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 .app > footer {
