User settings lateral menu

--- a/frontend/src/css/util.css
+++ b/frontend/src/css/util.css
@@ -110,3 +110,11 @@ h6.mb, .h6.mb {
 .full-width {
     width: 100%;
 }
+
+.flex-container {
+    display: flex;
+}
+
+.flex-item-full-width {
+    flex: 1;
+}
