--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -20,6 +20,7 @@ a {
 
 a:hover {
     color: #b1e7fa;
+    cursor: pointer;
 }
 
 .app:not(.loading) {
@@ -245,4 +246,41 @@ label.checkbox > input:checked + span::after {
 
 .button.green:hover {
     background-color: #34bc61
+}
+
+#page-lateral-navigation {
+    width: 260px;
+    padding-right: 20px;
+}
+
+#page-lateral-navigation ul {
+    width: 100%;
+}
+
+#page-lateral-navigation ul li {
+    width: 100%;
+    margin-top: 8px;
+    margin-bottom: 8px;
+}
+
+#page-lateral-navigation ul li a {
+    display: inline-block;
+    width: 100%;
+    padding: 7px 15px;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.1s ease-out;
+}
+
+#page-lateral-navigation ul li a:hover {
+    color: inherit;
+    background-color: rgba(255, 255, 255, 0.075);
+}
+
+#page-lateral-navigation ul li.active a {
+    background-color: rgba(255, 255, 255, 0.15);
+}
+
+#desktop-variable-content > section:not(.active) {
+    display: none;
 }
