--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -246,3 +246,38 @@ label.checkbox > input:checked + span::after {
 .button.green:hover {
     background-color: #34bc61
 }
+
+.flex-container {
+    min-height: 65vh;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+
+}
+
+.flex-row {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.game-mode {
+    flex-basis: 34%;
+    height: 200px;
+    border-radius: 20px;
+    border: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.game-mode-label {
+    font-size: 2.3em;
+}
+
+.game-mode-description {
+    font-size: 1.2em;
+}
+
+
