--- a/frontend/src/css/util.css
+++ b/frontend/src/css/util.css
@@ -111,7 +111,22 @@ h6.mb, .h6.mb {
     width: 100%;
 }
 
-.flexbox-break {
-    flex-basis: 100%;
-    height: 0;
+.red-pink-bg {
+    background-color: #DE4567;
+}
+
+.brown-bg {
+    background-color: #91442D;
+}
+
+.deep-blue-bg {
+    background-color: #217D9E;
+}
+
+.yellow-bg {
+    background-color: #EAB01F;
+}
+
+.green-bg {
+    background-color: #1E9B48;
 }
