--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -141,6 +141,11 @@ input {
     color: #333;
 }
 
+input.error {
+    color: #bb1717;
+    background-color: #f0d3d3;
+}
+
 input::placeholder {
     color: rgba(0, 0, 0, 0.4)
 }
