--- a/frontend/src/css/util.css
+++ b/frontend/src/css/util.css
@@ -119,6 +119,10 @@ h6.mb, .h6.mb {
     background-color: #91442D;
 }
 
+.curious-blue-bg {
+    background-color: #1888C6;
+}
+
 .deep-blue-bg {
     background-color: #217D9E;
 }
@@ -129,4 +133,16 @@ h6.mb, .h6.mb {
 
 .green-bg {
     background-color: #1E9B48;
+}
+
+.purple-heart-bg {
+    background-color: #5B1EBC;
+}
+
+.text-white {
+    color: white;
+}
+
+.float-right {
+    float: right;
 }
