--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -298,6 +298,22 @@ label.checkbox > input:checked + span::after {
     color: white;
 }
 
+.gm-serie {
+    background-color: #EAB01F;
+}
+
+.gm-ascension {
+    background-color: #217D9E;
+}
+
+.gm-blitz {
+    background-color: #DE4567;
+}
+
+.gm-survivant {
+    background-color:  #1E9B48;
+}
+
 /* Large */
 @media screen and (max-width: 1200px) {
     .game-mode {
