--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -295,9 +295,11 @@ button:disabled {
 
 .game-mode-label {
     font-size: 2.3em;
+    color: white;
 }
 
 .game-mode-description {
+    color: white;
     font-size: 1.4em;
     line-height: 1.3em;
 }
