Fix After Requested Changes

--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -342,6 +342,10 @@ button:disabled {
     outline: none;
 }
 
+.category-selected {
+    background-color: #5B1EBC;
+}
+
 .category-name {
     font-size: 1.8em;
     color: white
