--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -408,6 +408,15 @@ button:disabled {
     background-color:  #1E9B48;
 }
 
+.next-button {
+    color: white;
+    background-color: #1E9B48;
+}
+
+.next-button:focus {
+    outline: none;
+}
+
 /* Large */
 @media screen and (max-width: 1200px) {
 
