--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -424,14 +424,49 @@ button:disabled {
 
 .question-type-container {
     display: flex;
+    width: 300px;
     flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 .question-type-checkbox {
     opacity: 1 !important;
+    width: 30px !important;
+    height: 30px !important;
     display: inline;
 }
 
+.question-type-name {
+    font-size: 1.5em;
+    margin-left: 10px;
+
+}
+
+.question-type-wrapper {
+    display: flex;
+    align-items: center;
+    margin-bottom: 60px;
+}
+
+
+.win-criterion-input {
+    width: 20%;
+    font-size: 2em;
+    text-align: center;
+}
+
+.win-criterion-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 60px;
+}
+
+.win-criterion-max {
+    font-size: 1.2em;
+    margin-bottom: 20px;
+}
 
 /* Large */
 @media screen and (max-width: 1200px) {
@@ -452,9 +487,12 @@ button:disabled {
         margin-bottom: 60px;
     }
 
+    /* Game Options */
+    .win-criterion-input {
+        width: 25%;
+    }
+
 }
-
-
 
 /* Medium */
 @media screen and (max-width: 992px) {
@@ -473,6 +511,11 @@ button:disabled {
         width: 20%;
         margin-left: 50px;
         margin-bottom: 60px;
+    }
+
+    /* Game Options */
+    .win-criterion-input {
+        width: 30%;
     }
 
 }
@@ -495,8 +538,6 @@ button:disabled {
         font-size: 1.7em;
         color: white
     }
-
-
 
 }
 
@@ -524,7 +565,6 @@ button:disabled {
         width: 35%;
         margin-left: 30px;
         margin-bottom: 60px;
-
     }
 
     .category {
@@ -542,6 +582,11 @@ button:disabled {
     .large-button {
         padding: 15px 40px;
         font-size: 1.3em;
+    }
+
+    /* Game Options */
+    .win-criterion-input {
+        width: 50%;
     }
 
 }
