--- a/frontend/src/css/util.css
+++ b/frontend/src/css/util.css
@@ -155,6 +155,14 @@ h6.mb, .h6.mb {
     color: white;
 }
 
+.text-green {
+    color: #1E9B48;
+}
+
+.text-red {
+   color: #de2d48;
+}
+
 .float-right {
     float: right;
 }
