--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -250,7 +250,8 @@ button:disabled {
 }
 
 #login-form,
-#register-form {
+#register-form,
+#forgot-password-form {
     max-width: 600px;
     margin: auto;
 }
