--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -587,6 +587,16 @@ button:disabled {
     margin-top: 10px;
 }
 
+.question-content {
+    font-size: 1.6em;
+    text-align: center;
+}
+
+.question-answer-container {
+    display: flex;
+    flex-flow: row wrap;
+}
+
 
 /* Large */
 @media screen and (max-width: 1200px) {
