--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -584,6 +584,7 @@ button:disabled {
 .question-header-info-box:nth-child(2)
 {
     margin-top: 10px;
+    text-transform: capitalize;
 }
 
 .question-content {
