--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -672,7 +672,12 @@ button:disabled {
 
 }
 
-.arrow-back {
-    height: 3em!important;
-    width: 3em!important;
+.game-mode-btn-precedent {
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.game-mode-btn-precedent-svg:hover {
+    filter: brightness(95%);
 }
