--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -326,6 +326,7 @@ button:disabled {
 
 .home-menu {
     display: flex;
+    flex-flow: row wrap;
     justify-content: space-evenly;
     margin-top: 100px;
 }
@@ -335,6 +336,9 @@ button:disabled {
     padding: 80px;
     border-radius: 40px;
     border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .homepage-button:hover {
@@ -354,7 +358,7 @@ button:disabled {
     background-color: #f7c634;
 }
 
-.home-menu-btn-label {
+.homepage-button-label {
     font-size: 3em;
     color: white;
 }
@@ -660,6 +664,13 @@ button:disabled {
 /* Large */
 @media screen and (max-width: 1200px) {
 
+    /* Homepage */
+    .homepage-button {
+        width: 40%;
+        padding: 50px;
+    }
+
+
     /* game Modes */
     .game-mode {
         width: 40%;
@@ -687,6 +698,12 @@ button:disabled {
 /* Medium */
 @media screen and (max-width: 992px) {
 
+    /* Homepage */
+    .homepage-button {
+        width: 70%;
+        margin-bottom: 60px;
+    }
+
     /* Game modes */
     .game-mode {
        width: 40%;
@@ -712,6 +729,11 @@ button:disabled {
 
 /* Small */
 @media screen and (max-width: 768px) {
+
+    /* Homepage */
+    .homepage-button {
+        width: 80%;
+    }
 
     /* Game modes */
     .game-mode {
