--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -373,8 +373,9 @@ button:disabled {
 
 .game-mode {
     width: 34%;
-    padding-top: 20px;
-    padding-bottom: 40px;
+    padding: 20px 40px 40px 40px;
+    /*padding-top: 20px;*/
+    /*padding-bottom: 40px;*/
     margin-bottom: 80px;
     border-radius: 40px;
     border: none;
@@ -622,7 +623,8 @@ button:disabled {
 }
 
 .question-round {
-    margin-left: 5%;
+    font-size: 2.2em;
+    margin-bottom: 30px;
 }
 
 .question-content {
@@ -630,16 +632,35 @@ button:disabled {
     text-align: center;
 }
 
-.question-answer-container {
+.question-screen-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.question-screen-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.question-screen-center {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.qcm-container {
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-content: space-around;
     margin-bottom: 40px;
 }
 
 .qcm-box {
-    width: 34%;
+    width: 45%;
     border: none;
     border-radius: 30px;
     padding: 70px;
@@ -671,7 +692,6 @@ button:disabled {
     align-items: center;
 }
 
-
 .answer-header-info {
     display: flex;
     flex-direction: column;
@@ -681,6 +701,13 @@ button:disabled {
 
 .answer-header-info-round {
     font-size: 1.4em;
+}
+
+.answers-container {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 
@@ -716,6 +743,10 @@ button:disabled {
         width: 25%;
     }
 
+    /* Question */
+    .question-header-info-box {
+        padding: 5px 40px;
+    }
 
 }
 
@@ -746,9 +777,10 @@ button:disabled {
     }
 
     /* Question */
-    .qcm-box {
-        width: 40%;
+    .question-header-info-box {
+        padding: 5px 30px;
     }
+
 }
 
 /* Small */
@@ -761,7 +793,16 @@ button:disabled {
 
     /* Game modes */
     .game-mode {
-        width: 40%;
+        width: 100%;
+        margin-bottom: 30px;
+    }
+
+    .game-mode-container {
+        /*display: flex;*/
+        /*flex-wrap: wrap;*/
+        /*flex-direction: row;*/
+        /*justify-content: space-evenly;*/
+        flex-direction: column;
     }
 
     .game-mode-description {
@@ -781,8 +822,31 @@ button:disabled {
     }
 
     /* Question */
-    .question-header-info-box {
-        padding: 5px 30px;
+    .qcm-box {
+        padding: 50px;
+    }
+
+
+    .question-screen-container {
+        flex-direction: column;
+    }
+
+    .question-screen-left {
+        order: 1;
+        flex-direction: row-reverse;
+        justify-content: space-around;
+        align-items: center;
+        margin-bottom: 20px;
+    }
+
+    .question-screen-right {
+        order: 2;
+        margin-bottom: 30px;
+    }
+
+    .question-screen-center {
+        order: 3;
+        margin-bottom: 0;
     }
 
 }
@@ -790,20 +854,13 @@ button:disabled {
 /* X-Small */
 @media screen and (max-width: 576px) {
 
-    /* Game modes*/
-    .game-mode {
-        width: 34%;
-        padding: 40px;
-        border-radius: 20px;
-    }
-
     .game-mode-label {
         font-size: 1.8em;
-        margin: 0;
+        margin-bottom: 10px;
     }
 
     .game-mode-description {
-        display: none;
+        font-size: 1.4em;
     }
 
     /* Categories */
@@ -837,16 +894,89 @@ button:disabled {
 
 
     /* Question */
-    .question-header {
-        flex-direction: column;
-    }
-
     .question-round {
+        font-size: 1.6em;
         margin-bottom: 20px;
     }
 
-    .question-header-info-box {
-        padding: 5px 20px;
+    .question-content {
+        font-size: 1.1em;
+    }
+
+    .qcm-answer {
+        font-size: 1.2em;
     }
 
 }
+
+.answer-container {
+    display: flex;
+}
+
+.answer-screen-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.answer-screen-right {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto
+}
+
+.answer-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 50px;
+}
+.answer-result {
+    font-size: 2.5em;
+    font-weight: bold;
+    margin-bottom: 20px;
+    /*text-align: center;*/
+    /*margin-bottom: 30px;*/
+}
+
+.answer-round {
+    font-size: 1.4em;
+}
+
+.answer-content-container {
+    display: flex;
+    flex-direction: column; /* ROW IN V2 */
+}
+
+.good-answer {
+    font-size: 2.3em;
+}
+
+.scores-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+/*.question-screen-container {*/
+/*    display: flex;*/
+/*    justify-content: space-between;*/
+/*}*/
+
+/*.question-screen-left {*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    justify-content: space-between;*/
+/*}*/
+
+/*.question-screen-center {*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    justify-content: space-evenly;*/
+/*    align-items: center;*/
+/*    margin-bottom: 20px;*/
+/*}*/
+
+
+
