--- a/frontend/src/css/util.css
+++ b/frontend/src/css/util.css
@@ -143,6 +143,13 @@ h6.mb, .h6.mb {
     background-color: #217D9E;
 }
 
+.malibu-blue-bg {
+    background-color: #2EC6EF;
+}
+
+.outrageous-orange-bg {
+    background-color: #FF693B;
+}
 .yellow-bg {
     background-color: #EAB01F;
 }
