Password can be reset

--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -251,7 +251,8 @@ button:disabled {
 
 #login-form,
 #register-form,
-#forgot-password-form {
+#forgot-password-form,
+#reset-password-form {
     max-width: 600px;
     margin: auto;
 }
