--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -672,12 +672,18 @@ button:disabled {
 
 }
 
-.game-mode-btn-precedent {
+.back-arrow-button {
     background: none;
     border: none;
     cursor: pointer;
 }
 
-.game-mode-btn-precedent-svg:hover {
+.back-arrow-button:focus {
+    outline: none;
+}
+
+.back-arrow-svg:hover {
     filter: brightness(95%);
 }
+
+
