remove comment / change font size

--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -1053,6 +1053,7 @@ button:disabled {
     background: #217D9E;
     outline: none;
     border: none;
+    font-size: 1em;
 }
 
 .join-room-enter:hover {
