--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -381,6 +381,8 @@ button:disabled {
 
 .create-game-header {
     display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     margin-bottom: 50px;
 }
 
