Add CSS Spec To Flex Container

--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -798,7 +798,8 @@ button:disabled {
 
 .lobby-title {
     display: flex;
-    margin:0 auto 30px auto;
+    justify-content: center;
+    margin-bottom: 30px;
 }
 
 .lobby-info-container {
