--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -1035,7 +1035,7 @@ button:disabled {
 }
 
 .join-room-label {
-    font-size: 1.5em;
+    font-size: 2.7vw;
 }
 
 #join-room-input {
@@ -1044,6 +1044,7 @@ button:disabled {
     margin-top: 20px;
     margin-bottom: 40px;
     text-align: center;
+    font-size: 1.5em;
 }
 
 .join-room-enter {
